--- a/tictactoe.tex
+++ b/tictactoe.tex
@@ -363,30 +363,31 @@ return {
 \subsection*{5(a)}
 
 \begin{figure}[h]
-	\label{fig:part5a}
 	\caption{Training curve ($\#$ hidden units: 64)}
 	\includegraphics[width=\linewidth]{figures/part5a.png}
+	\label{fig:part5a}
 \end{figure}
 	
 \subsection*{5(b)}
 The number of hidden units were reset to values 32, 128 and 256 to obtain the following training curves:
 
 \begin{figure}[h]
-	\label{fig:part5b_32}
 	\caption{Training curve ($\#$ hidden units: 32)}
 	\includegraphics[width=\linewidth]{figures/part5b_32.png}
+	\label{fig:part5b_32}
 \end{figure}
 
 \begin{figure}[h]
-	\label{fig:part5b_128}
 	\caption{Training curve ($\#$ hidden units: 128)}
 	\includegraphics[width=\linewidth]{figures/part5b_128.png}
+	\label{fig:part5b_128}
+	
 \end{figure}
 
 \begin{figure}[h]
-	\label{fig:part5b_256}
 	\caption{Training curve ($\#$ hidden units: 256)}
 	\includegraphics[width=\linewidth]{figures/part5b_256.png}
+	\label{fig:part5b_256}
 \end{figure}
 
 
@@ -396,7 +397,23 @@ From Figure \ref{fig:part5a}, it seems as though the policy never played invalid
 \subsection*{5(d)}
 
 \end{homeworkProblem}
+
 \clearpage
+
+%----------------------------------------------------------------------------------------
+%	PROBLEM 6
+%----------------------------------------------------------------------------------------
+\begin{homeworkProblem}
+Refer to Figure \ref{fig:part6}
+\begin{figure}[h]
+	\caption{}
+	\includegraphics[width=\linewidth]{figures/part6.png}
+	\label{fig:part6}
+\end{figure}
+
+
+\end{homeworkProblem}
+
 
 
 
