--- a/tictactoe.tex
+++ b/tictactoe.tex
@@ -404,7 +404,7 @@ From Figure \ref{fig:part5a}, it seems as though the policy never played invalid
 %	PROBLEM 6
 %----------------------------------------------------------------------------------------
 \begin{homeworkProblem}
-Refer to Figure \ref{fig:part6}
+Refer to Figure \ref{fig:part6}.
 \begin{figure}[h]
 	\caption{}
 	\includegraphics[width=\linewidth]{figures/part6.png}
