updated part7 of report

--- a/tictactoe.tex
+++ b/tictactoe.tex
@@ -411,7 +411,20 @@ Refer to Figure \ref{fig:part6}.
 	\label{fig:part6}
 \end{figure}
 
-
+\end{homeworkProblem}
+\clearpage
+%----------------------------------------------------------------------------------------
+%	PROBLEM 7
+%----------------------------------------------------------------------------------------
+\begin{homeworkProblem}
+	Refer to Figure \ref{fig:part7}.
+	\begin{figure}[h]
+		\centering
+		\caption{Evolution of first move probability for each of the 9 cells of the tic-tac-toe board}
+		\includegraphics[width=\linewidth]{figures/part7.png}
+		\label{fig:part7}
+	\end{figure}
+	
 \end{homeworkProblem}
 
 
