--- a/tictactoe.tex
+++ b/tictactoe.tex
@@ -399,10 +399,10 @@ From Figure \ref{fig:part5a}, it seems as though the policy never played invalid
 \subsection*{5(d)}
 Using the final learned policy, the agent wins 98/100 games and ties 2/100. This can be seen in Figure \ref{fig:part6}.
 
-\begin{multicols}{2}
+\newpage
+\begin{multicols}{5}
 	\begin{verbatim}
 	Game: 0
-	
 	..x
 	...
 	o..
@@ -415,7 +415,6 @@ Using the final learned policy, the agent wins 98/100 games and ties 2/100. This
 	..x
 	o.x
 	====
-	
 	\end{verbatim}
 	\columnbreak
 	\begin{verbatim}
@@ -433,77 +432,72 @@ Using the final learned policy, the agent wins 98/100 games and ties 2/100. This
 	..x
 	====
 	\end{verbatim}
-	
-	
+	\columnbreak
+	\begin{verbatim}
+	Game: 38
+	..x
+	..o
+	...
+	====
+	..x
+	.xo
+	..o
+	====
+	..x
+	.xo
+	x.o
+	====
+	\end{verbatim}
+	\columnbreak
+	\begin{verbatim}
+	Game: 57
+	..x
+	o..
+	...
+	====
+	o.x
+	o..
+	..x
+	====
+	o.x
+	o.x
+	..x
+	====
+	\end{verbatim}
+	\columnbreak
+	\begin{verbatim}
+	Game: 76
+	.ox
+	...
+	...
+	====
+	.ox
+	...
+	.ox
+	====
+	.ox
+	..x
+	.ox
+	====
+	\end{verbatim}
+	\columnbreak
+	\begin{verbatim}
+	Game: 95
+	..x
+	...
+	..o
+	====
+	.ox
+	.x.
+	..o
+	====
+	.ox
+	.x.
+	x.o
+	====
+	\end{verbatim}
+	\columnbreak
 \end{multicols}
-
-
-\begin{verbatim}
-
-Game: 38
-..x
-..o
-...
-====
-..x
-.xo
-..o
-====
-..x
-.xo
-x.o
-====
-
-
-
-Game: 57
-..x
-o..
-...
-====
-o.x
-o..
-..x
-====
-o.x
-o.x
-..x
-====
-
-
-Game: 76
-.ox
-...
-...
-====
-.ox
-...
-.ox
-====
-.ox
-..x
-.ox
-====
-
-
-Game: 95
-..x
-...
-..o
-====
-.ox
-.x.
-..o
-====
-.ox
-.x.
-x.o
-====
-
-\end{verbatim}
-
-
-
 
 \end{homeworkProblem}
 
